# sscs_assn_1

./: .coverage  .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  README.md  SECURITY.md  artifact.bundle  artifact.md  bandit-initial.txt  cyclonedx-sbom.json  main.py  pyproject.toml  test_checkpoint.py  test_consistency.py  test_consistency_wronginput.py  test_consistency_wronginput2.py  test_consistencyfail.py  test_empty.py  test_inclusion.py  test_inclusion_wronginput.py  test_inclusion_wronginput2.py  test_inclusionfail.py  trace
.github/workflows/: cd.yml  ci.yml  scorecard.yml
python-rekor-monitor-template-main/: README.md  artifact.bundle  bandit-final.txt  bandit-initial.txt  main.py  merkle_proof.py  pylint.initial.txt  pylint.intermediate.txt  ruff.initial.txt  util.py
src/sscs_assn4/: __main__.py  artifact.md  util.py
tests/: test_checkpoint.py  test_consistency.py  test_consistency_wronginput.py  test_consistency_wronginput2.py  test_consistencyfail.py  test_empty.py  test_inclusion.py  test_inclusion_wronginput.py  test_inclusion_wronginput2.py  test_inclusionfail.py
