[project]
package-mode = false
name = "sscs-assn-1"
version = "0.1.0"
description = "Rekor monitor assignment for software supply chain security"
authors = [
    {name = "je2230",email = "118147259+je2230@users.noreply.github.com"}
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ruff (>=0.14.4,<0.15.0)",
    "pylint (>=4.0.2,<5.0.0) ; python_version >='3.10.0,<3.11'",
    "mypy (>=1.18.2,<2.0.0)",
    "bandit (>=1.8.6,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
