[project]
name = "assn1"
version = "0.1.0"
description = "Python rekor monitor assignment for sscs"
authors = [
    {name = "Jess",email = "ermi.jess@gmail.com"}
]
license = {text = "GPL3.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ruff (>=0.14.4,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pylint (>=4.0.2,<5.0.0)",
    "bandit (>=1.8.6,<2.0.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
make-package = false

