[project]
name = "sscs_assn4"
version = "0.1.0"
description = "Python rekor monitor assignment for sscs"
authors = [
    {name = "Jess",email = "ermi.jess@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ruff (>=0.14.4,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "pylint (>=4.0.2,<5.0.0)",
    "bandit (>=1.8.6,<2.0.0)",
    "pytest (>=9.0.0,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "jsonschema (>=4.25.1,<5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "cryptography (>=46.0.3,<47.0.0)"
]

[tool.coverage.run]
patch = ["subprocess"]
sigterm = true
parallel = true

[tool.pylint.format]
max-line-length = 200
max-module-lines = 1000

[tool.pylint.method_args]
# List of qualified names (i.e., library.method) which require a timeout
# parameter e.g. 'requests.api.get,requests.api.post'
timeout-methods = ["requests.api.delete", "requests.api.get", "requests.api.head", "requests.api.options", "requests.api.patch", "requests.api.post", "requests.api.put", "requests.api.request"]

[tool.pylint.reports]
# Python expression which should return a score less than or equal to 10. You
# have access to the variables 'fatal', 'error', 'warning', 'refactor',
# 'convention', and 'info' which contain the number of messages in each category,
# as well as 'statement' which is the total number of statements analyzed. This
# score is used by the global evaluation report (RP0004).
evaluation = "max(0, 0 if fatal else 10.0 - ((float(5 * error + warning + refactor + convention) / statement) * 10))"
score = true

[tool.pylint.similarities]
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
ignore-signatures = true
min-similarity-lines = 4

[project.urls]
repository = "https://github.com/je2230/sscs_assn_1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
